<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.catan.mycatan.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ImageView
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/avatar" />
    <TextView
        android:id="@+id/nameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="#000000"
        android:text="@string/UnitName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nameText"
        android:gravity="center"
        android:text="@string/Price"
        android:textSize="20sp" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">


        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Works"
            android:textSize="16sp" />
    </ScrollView>

</RelativeLayout>